objects/SalesProduct__c/SalesProduct__c.object-meta.xml
<CustomObject>
    <description>Products</description>
    <label>Sales Product</label>
    <nameField>
        <label>Sales Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>