objects/SalesProduct__c/fields/EVPL__c.field-meta.xml
<CustomField>
    <fullName>EVPL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EVPL</label>
    <type>Checkbox</type>
</CustomField>