objects/SalesProduct__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <referenceTo>Product_Family__c</referenceTo>
    <relationshipLabel>Sales Products</relationshipLabel>
    <relationshipName>Sales_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>