objects/SalesProduct__c/fields/Product_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Product_Grouping__c</fullName>
    <label>Product Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Method</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>