objects/SalesProduct__c/fields/SortKey__c.field-meta.xml
<CustomField>
    <fullName>SortKey__c</fullName>
    <label>SortKey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>