objects/SalesProduct__c/listViews/Active_Sales_Products.listView-meta.xml
<ListView>
    <fullName>Active_Sales_Products</fullName>
    <columns>NAME</columns>
    <columns>SortKey__c</columns>
    <columns>SalesProductExternalID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Expiration__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Grouping__c</columns>
    <columns>SFDCSalesCatWizardDisplay__c</columns>
    <columns>NoMRRFlag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active Sales Products</label>
</ListView>