objects/SalesProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SalesProductExternalID__c</columns>
    <columns>NAME</columns>
    <columns>Expiration__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Product_Grouping__c</columns>
    <columns>SortKey__c</columns>
    <columns>SFDCSalesCatWizardDisplay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>