objects/SalesProduct__c/listViews/Sales_Products_EVPL_and_MPLS.listView-meta.xml
<ListView>
    <fullName>Sales_Products_EVPL_and_MPLS</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Product_Family__c</columns>
    <columns>NAME</columns>
    <columns>MPLS__c</columns>
    <columns>EVPL__c</columns>
    <columns>Expired__c</columns>
    <columns>AvailableInWizard__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EVPL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>MPLS__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sales Products EVPL and MPLS</label>
</ListView>